--- a/ChangeLog
+++ b/ChangeLog
@@ -2,68 +2,59 @@
 
 Änderungen
 ----------
-v0.2.3 (??.12.2007)
-- Neuer View: Kreuztabelle
-- Bug 1864071 - Gelbe Karten nur zählen, wenn nicht Gelbrot erhalten
-- Integration tt_address für Vereine
-- Bug 1864066: Rote Karte wird auch für Auswechselspieler in Statistik gewertet
-- Für die Tabellenfahrt wird ein Font mitgeliefert
-- Liste der Liveticker um weitere TS-Config erweitert (limit, orderby und timeRange)
-- Neuer View: Teamliste
-- Anpassungen für Cal Version 0.16
-- Templatevariable des ScopeView von competitionSelectionTemplate 
-  auf scopeTemplate geändert. Dadurch funktioniert jetzt die Zuordnung im Flexform.
-- Der Spielplan akzeptiert jetzt auch UIDs von Teams aus dem Request. Dies kann man
-  mit der Einstellung matchtable.acceptTeamIdFromRequest wieder deaktivieren.
+v0.2.3 (29.01.2008)
+* Neuer View: Kreuztabelle
+* Bug 1864071 - Gelbe Karten nur zählen, wenn nicht Gelbrot erhalten
+* Integration tt_address für Vereine
+* Bug 1864066: Rote Karte wird auch für Auswechselspieler in Statistik gewertet
+* Für die Tabellenfahrt wird ein Font mitgeliefert
+* Bug 1880237: Chart zeigt falschen Verlauf
+* Liste der Liveticker um weitere TS-Config erweitert (limit, orderby und timeRange)
+* Neuer View: Teamliste
+* Anpassungen für Cal Version 0.16
+* Templatevariable des ScopeView von competitionSelectionTemplate auf scopeTemplate geändert. Dadurch funktioniert jetzt die Zuordnung im Flexform.
+* Der Spielplan akzeptiert jetzt auch UIDs von Teams aus dem Request. Dies kann man mit der Einstellung matchtable.acceptTeamIdFromRequest wieder deaktivieren.
 
 v0.2.2 (12.11.2007)
-- Bugfix: Bei Wettbewerbsstrafen wurden Niederlagen nicht korrigiert
-- Nicht verwendete Kontrollelemente der Ligatabelle werden jetzt automatisch ausgeblendet. Vorher
-  waren immer noch die Marker sichtbar.
-- Bugfix: alle unnötigen Leerzeichen außerhalb von <?php ?> entfernt
-- Bugfix: In der PlayerSummary-Statistik konnte es zu DB-Fehlern kommen, wenn keine Teams 
-  gefunden wurden.
-- Bugfix: Bei den Auswechslungen wurden die Ticker in einem Fall nicht zusammengefasst.
-- Bugfix: CalendarService liefert bei der Suche jetzt keine Warnungen mehr. Aber auch 
-  noch keine Ergebnisse!
-- Spielbericht jetzt auf Basis von HTML-Template
-- Bei den Ticker- und Profile-Wraps wird ist jetzt das Datenarray gesetzt und kann verwendet werden.
-  Damit ergeben sich erheblich mehr Möglichkeiten bei der TS-Konfiguration.
-- Bugfix: im Profile-Wrap wurde der Vorname nicht ausgeben.
-- Bugfix ID-0001: Ligatabelle wurde im 2-Punktemodus falsch berechnet
-- Zuschauer-Statistik: Sortierung nach Durchschnittswerten ist jetzt möglich
-- Scopeauswahl: Es kann jetzt auch nach Vereinen eingeschränkt werden.
-- Spielbericht: Ein eingewechselter Spieler, der wieder ausgewechselt wird, wird nun korrekt dargestellt.
-- Ein erster Unittest wurde erstellt. Hier gibt es aber noch viel Arbeit...
+* Bugfix: Bei Wettbewerbsstrafen wurden Niederlagen nicht korrigiert
+* Nicht verwendete Kontrollelemente der Ligatabelle werden jetzt automatisch ausgeblendet. Vorher waren immer noch die Marker sichtbar.
+* Bugfix: alle unnötigen Leerzeichen außerhalb von <?php ?> entfernt
+* Bugfix: In der PlayerSummary-Statistik konnte es zu DB-Fehlern kommen, wenn keine Teams gefunden wurden.
+* Bugfix: Bei den Auswechslungen wurden die Ticker in einem Fall nicht zusammengefasst.
+* Bugfix: CalendarService liefert bei der Suche jetzt keine Warnungen mehr. Aber auch noch keine Ergebnisse!
+* Spielbericht jetzt auf Basis von HTML-Template
+* Bei den Ticker- und Profile-Wraps wird ist jetzt das Datenarray gesetzt und kann verwendet werden. Damit ergeben sich erheblich mehr Möglichkeiten bei der TS-Konfiguration.
+* Bugfix: im Profile-Wrap wurde der Vorname nicht ausgeben.
+* Bugfix ID-0001: Ligatabelle wurde im 2-Punktemodus falsch berechnet
+* Zuschauer-Statistik: Sortierung nach Durchschnittswerten ist jetzt möglich
+* Scopeauswahl: Es kann jetzt auch nach Vereinen eingeschränkt werden.
+* Spielbericht: Ein eingewechselter Spieler, der wieder ausgewechselt wird, wird nun korrekt dargestellt.
+* Ein erster Unittest wurde erstellt. Hier gibt es aber noch viel Arbeit...
 
 Die Veränderungen im Spielbericht sind diesmal recht massiv. Vor allem weil sich auch viele
 Einstellungen im TS-Setup geändert haben. Diese Umstellungen habe ich durchgeführt, um bei der
 Erstellung des Layouts maximale Freiheiten zu gewähren. Ein Blick in das TS-Setup der Extension 
 ist bei Anpassungswünschen sehr zu empfehlen. Das sind auch einige zusätzliche Hinweise drin.
 
-- Version rn_base 0.0.8 notwendig
+* Version rn_base 0.0.8 notwendig
 
 v0.2.1 (29.09.2007)
-- Bugfix: Parameterübergabe im Scope funktionierte nicht mehr
-- Bessere Formatierung der Control-Elemente der Ligatabelle und des Scopes möglich
-  Hier sind jetzt Wraps um die erzeugten Links möglich, wobei zwischen dem aktiven 
-  und den nicht aktiven Elementen unterschieden werden kann. Außerdem gibt es einen 
-  neuen Marker der nur die URL ausgibt.
-- Spieltagsanzeige erfolgt nicht mehr automatisch, sondern über Einstellung im Flexform.
-- Neu: Zuschauer-Statistik
-- Performance bei Spielerstatistik um Faktor 3 verbessert
+* Bugfix: Parameterübergabe im Scope funktionierte nicht mehr
+* Bessere Formatierung der Control-Elemente der Ligatabelle und des Scopes möglich. Hier sind jetzt Wraps um die erzeugten Links möglich, wobei zwischen dem aktiven und den nicht aktiven Elementen unterschieden werden kann. Außerdem gibt es einen neuen Marker der nur die URL ausgibt.
+* Spieltagsanzeige erfolgt nicht mehr automatisch, sondern über Einstellung im Flexform.
+* Neu: Zuschauer-Statistik
+* Performance bei Spielerstatistik um Faktor 3 verbessert
 
 v0.2.0 (27.09.2007)
 Man beachte den Sprung auf Version 0.2.0. Grund ist eine größere Umstellung der Statistiken.
 
-- Die Statistikfunktion wurde komplett überarbeitet und als Service gestaltet. Somit 
-  sollte es recht einfach möglich sein, weitere Statistiken, auch aus anderen 
-  Extensions, hinzuzufügen.
-  Nachteil: Die bisherigen Plugineinstellungen funktionieren nicht mehr. (Daher der Versionssprung)
-  Nach der Installation ist es empfehlenswert, das alte Plugin zur Anzeige der Statistik zu löschen
-  und ein neues Plugin anzulegen.
-  Die Statistiken verwenden jetzt alle HTML-Templates. Die Einstellung zur Sortierung der Spieler
-  ist aus dem Flexform ins TS-Setup gewandert:
+Die Statistikfunktion wurde komplett überarbeitet und als Service gestaltet. Somit sollte es 
+recht einfach möglich sein, weitere Statistiken, auch aus anderen Extensions, hinzuzufügen. 
+Nachteil: Die bisherigen Plugineinstellungen funktionieren nicht mehr. (Daher der Versionssprung)
+Nach der Installation ist es empfehlenswert, das alte Plugin zur Anzeige der Statistik zu löschen
+und ein neues Plugin anzulegen.
+Die Statistiken verwenden jetzt alle HTML-Templates. Die Einstellung zur Sortierung der Spieler
+ist aus dem Flexform ins TS-Setup gewandert:
 
   # Sortierung der Spieler: 0-alphabetisch, 1-wie im Team
   plugin.tx_cfcleaguefe_competition.statistics.player.profileSortOrder = 0
@@ -72,35 +63,23 @@ Man beachte den Sprung auf Version 0.2.0. Grund ist eine größere Umstellung de
   dringend zu empfehlen im Livebetrieb das Plugin für die Statistik als USER laufen zu
   lassen. (Bei der Standardinstallation ist dies der Fall.) 
    
-- Bei Berechnung der Tabelle werden die erweiterten Korrekturmöglichkeiten der Wettbewerbsstrafen 
-  berücksichtigt.
-- Spielfreie Mannschaften werden im Spielplan und in der Ligatabelle korrekt behandelt.
-  Im Spielplan ist man in der Art der Darstellung recht frei. Hierzu bitte einen Blick ins 
-  HTML-Template und in die setup.txt der Extension werfen.
-- Die Dokumentation wurde aktualisiert
+* Bei Berechnung der Tabelle werden die erweiterten Korrekturmöglichkeiten der Wettbewerbsstrafen berücksichtigt.
+* Spielfreie Mannschaften werden im Spielplan und in der Ligatabelle korrekt behandelt. Im Spielplan ist man in der Art der Darstellung recht frei. Hierzu bitte einen Blick ins HTML-Template und in die setup.txt der Extension werfen.
+* Die Dokumentation wurde aktualisiert
 
 v0.1.8 (18.09.2007)
-- Bugfix Teaser Ligatabelle: Der Tabellenstand sollte jetzt immer stimmen.
-- Für die Darstellung der Spiele wurde eine eigene Markerklasse erstellt. Diese wird im Spielplan
-  und in der Liste der Liveticker verwendet. Dadurch ist jetzt in beiden Views die volle 
-  Funktionalität verfügbar.
-- Für die Liste der Liveticker kann das Template jetzt im Flexform des Plugins gesetzt werden
-- In der Liste der Liveticker hat sich der Marker für den Link auf die Liveticker-Seite
-  geändert: ###MATCH_TICKER_LINK###
-- Bugfix: der rowroll des Spielplans verwendete bisher die TS-Config der Ligatabelle
-- Änderung im Spielplan. Bei zeitlicher Eingrenzung wird jetzt für die nicht gesetzte "Gegenrichtung"
-  immer das aktuelle Datum verwendet. Bei der Anweisung 10 Tage im voraus lautet, dann bedeutet das
-  10 Tage inklusive dem aktuellen Tag. Bisher wurde in diesem Fall die Vergangenheit nicht begrenzt.
-- Bugfix Spielerstatistik: Die Sortierung der Assists-Tabelle stimmt jetzt
-- In der Ligatabelle ist jetzt die volle Funktionalität verfügbar. Es können also auch Logos 
-  angezeigt werden. Allerdings haben sich die Marker nochmal geändert: aus ###ROW_TEAM_NAME### 
-  wird jetzt ###ROW_NAME###. Das "TEAM_" fällt also weg. Der Marker des Logos lautet entsprechend
-  ###ROW_LOGO###.
-
+* Bugfix Teaser Ligatabelle: Der Tabellenstand sollte jetzt immer stimmen.
+* Für die Darstellung der Spiele wurde eine eigene Markerklasse erstellt. Diese wird im Spielplan und in der Liste der Liveticker verwendet. Dadurch ist jetzt in beiden Views die volle Funktionalität verfügbar.
+* Für die Liste der Liveticker kann das Template jetzt im Flexform des Plugins gesetzt werden
+* In der Liste der Liveticker hat sich der Marker für den Link auf die Liveticker-Seite geändert: ###MATCH_TICKER_LINK###
+* Bugfix: der rowroll des Spielplans verwendete bisher die TS-Config der Ligatabelle
+* Änderung im Spielplan. Bei zeitlicher Eingrenzung wird jetzt für die nicht gesetzte "Gegenrichtung" immer das aktuelle Datum verwendet. Bei der Anweisung 10 Tage im voraus lautet, dann bedeutet das 10 Tage inklusive dem aktuellen Tag. Bisher wurde in diesem Fall die Vergangenheit nicht begrenzt.
+* Bugfix Spielerstatistik: Die Sortierung der Assists-Tabelle stimmt jetzt
+* In der Ligatabelle ist jetzt die volle Funktionalität verfügbar. Es können also auch Logos angezeigt werden. Allerdings haben sich die Marker nochmal geändert: aus ###ROW_TEAM_NAME### wird jetzt ###ROW_NAME###. Das "TEAM_" fällt also weg. Der Marker des Logos lautet entsprechend ###ROW_LOGO###.
 
 v0.1.7 (08.09.2007)
-- Beim Spielplan kann die Anzahl Spiele per TS begrenzt werden. Beispiel für Teaser:
-
+* Beim Spielplan kann die Anzahl Spiele per TS begrenzt werden. Beispiel für Teaser:
+[[code]]
 temp.nextMatch < plugin.tx_cfcleaguefe_competition
 temp.nextMatch {
   action = tx_cfcleaguefe_actions_MatchTable
@@ -123,8 +102,8 @@ temp.nextMatch {
     status = 0,1
   }
 }
-
-- Änderung der Marker und TS-Config im TeamView!
+[[code]]
+* Änderung der Marker und TS-Config im TeamView!
   Bei allen Markern ist jetzt ein TEAM_ vorangestellt.
   Vorher: ###PLAYERS### Neu: ###TEAM_PLAYERS###
   Gleiches Prinzip in der TS-Config
@@ -133,15 +112,12 @@ temp.nextMatch {
 
   Vorteil dieser Änderung ist der einheitliche Zugriff in allen Views
 
-- Im Spielplan ist der Zugriff auf alle Daten der Teams möglich also auch Logo, Bilder, 
-  Spieler usw. (Wer's brauch... ;)
-- Bugfix: Bei Eigentoren wird der Spielstand im Stenogramm jetzt aktualisiert
-- Die Eigentore werden jetzt extra in der Spielerstatistik gezählt
-- In der Spielerstatistik kann man jetzt einer Extra-Tabelle die besten Vorlagengeber anzeigen
-- Die Plugins wurden von USER_INT auf USER umgestellt. Dadurch werden die Ausgaben von TYPO3 im Cache abgelegt. 
-  Wer noch Selectboxen verwendet, muss das wieder umstellen.
-
-- NEU: Die Spiele können jetzt als Termine in die Kalender der Extension cal aufgenommen werden.
+* Im Spielplan ist der Zugriff auf alle Daten der Teams möglich also auch Logo, Bilder, Spieler usw. (Wer's brauch... ;)
+* Bugfix: Bei Eigentoren wird der Spielstand im Stenogramm jetzt aktualisiert
+* Die Eigentore werden jetzt extra in der Spielerstatistik gezählt
+* In der Spielerstatistik kann man jetzt einer Extra-Tabelle die besten Vorlagengeber anzeigen
+* Die Plugins wurden von USER_INT auf USER umgestellt. Dadurch werden die Ausgaben von TYPO3 im Cache abgelegt. Wer noch Selectboxen verwendet, muss das wieder umstellen.
+* NEU: Die Spiele können jetzt als Termine in die Kalender der Extension cal aufgenommen werden.
   Dafür muss das Static-Template "League Management cal-events (cfc_league_fe)" in die TS-Config 
   eingebunden werden. Dieses unbedingt NACH dem normalen Static-Template von cfc_league_fe, da es
   sich auf deren Angaben bezieht.
@@ -150,7 +126,7 @@ temp.nextMatch {
   unter views/templates/match_event.html.
   Damit nicht alle Spiele gezeigt werden, kann wie üblich die Auswahl vorher eingeschränkt werden.
   In diesem Fall aber nur per TS:
-
+[[code]]
   plugin.tx_cal_controller {
     view.cfc_league_events {
       # Eigenes Template einbinden
@@ -163,6 +139,7 @@ temp.nextMatch {
 #      competitionSelection = 1
     }
   }
+[[code]]
   In diesem Beispiel wird auf die Altersklasse mit der UID 1 und den Verein mit der UID 1 eingeschränkt.
   Mehrere Angaben werden durch Komma getrennt. Also z.B. groupSelection = 1,3
   Außerdem wird ein eigenes Template integriert. Zur Formatierung der einzelnen Werte bitte in 
@@ -175,18 +152,16 @@ temp.nextMatch {
   
 
 v0.1.6 (28.08.2007)
-- fehlenden include für tx_cfcleaguefe_models_club in ScopeController ergänzt
+* fehlenden include für tx_cfcleaguefe_models_club in ScopeController ergänzt
 
 v0.1.5 (28.08.2007)
-- In der Scopeauswahl kann man mit TS einen String zwischen den einzelnen Links setzen
-- Ligatabelle und Spielplan auf HTML-Views umgestellt. Die PHP-Views können aber per TS
-  wieder aktiviert werden:
+* In der Scopeauswahl kann man mit TS einen String zwischen den einzelnen Links setzen
+* Ligatabelle und Spielplan auf HTML-Views umgestellt. 
+Die PHP-Views können aber per TS wieder aktiviert werden:
   plugin.tx_cfcleaguefe_competition.leaguetable.viewType = PHP
 bzw.
   plugin.tx_cfcleaguefe_competition.matchtable.viewType = PHP
-- Der Teamview kann jetzt auch per Parameter initialisiert werden. Damit sind Links auf
-  Teams von anderen Views möglich (Spielplan oder Ligatabelle). Um nicht auf alle Teams zu 
-  verlinken, gibt es im Teamdatensatz das neue Feld "Link auf Teamseite möglich".
+* Der Teamview kann jetzt auch per Parameter initialisiert werden. Damit sind Links auf Teams von anderen Views möglich (Spielplan oder Ligatabelle). Um nicht auf alle Teams zu verlinken, gibt es im Teamdatensatz das neue Feld "Link auf Teamseite möglich".
   Im Spielplan und der Ligatabelle muss die PID der Zielseite per TS definiert werden:
   plugin.tx_cfcleaguefe_competition.matchtable.teamPage = 123
   plugin.tx_cfcleaguefe_competition.leaguetable.teamPage = 123
@@ -194,11 +169,10 @@ bzw.
 
 
 v0.1.4 (23.08.2007)
-- Im Spielstenogramm werden jetzt auch Nachspielminuten angezeigt
-- Zugeordnete Team-Logos werden nun auch im Spielbericht verwendet
-- Bilder auf Klick vergrößern ist jetzt für so ziemlich alle Bilder verfügbar (siehe TS-Setup)
-- Die Scopeauswahl ist auf HTML-Template umgestellt. Alternativ kann aber immer noch das alte 
-  PHP-Template verwendet werden. Umstellung mit folgender TS-Anweisung:
+* Im Spielstenogramm werden jetzt auch Nachspielminuten angezeigt
+* Zugeordnete Team-Logos werden nun auch im Spielbericht verwendet
+* Bilder auf Klick vergrößern ist jetzt für so ziemlich alle Bilder verfügbar (siehe TS-Setup)
+* Die Scopeauswahl ist auf HTML-Template umgestellt. Alternativ kann aber immer noch das alte PHP-Template verwendet werden. Umstellung mit folgender TS-Anweisung:
 
   plugin.tx_cfcleaguefe_competition.scopeSelection.viewType = PHP
 bzw.
@@ -206,28 +180,27 @@ bzw.
 
 
 v0.1.3 (15.8.2007)
-- einige Bugfixes in util_statistics
-- Prüfung auf Variable $mark in template/leaguetable.php um NPE zu vermeiden
-- In der Liste der Liveticker kann jetzt die Seite mit dem Ticker konfiguriert werden
-- Im Flexform des Spielbericht-View kann jetzt optional auch die UID eines Spiels direkt angegeben werden.
+* einige Bugfixes in util_statistics
+* Prüfung auf Variable $mark in template/leaguetable.php um NPE zu vermeiden
+* In der Liste der Liveticker kann jetzt die Seite mit dem Ticker konfiguriert werden
+* Im Flexform des Spielbericht-View kann jetzt optional auch die UID eines Spiels direkt angegeben werden.
 
 v0.1.2 (9.8.2007)
-- Auswahl Person im Flexform für Profileview korrigiert
-- Marker und TS für Bilder im Teamview geändert
-- Im Flexform des Teamviews kann jetzt ein Team auch direkt ausgewählt werden
+* Auswahl Person im Flexform für Profileview korrigiert
+* Marker und TS für Bilder im Teamview geändert
+* Im Flexform des Teamviews kann jetzt ein Team auch direkt ausgewählt werden
 
 Vielen Dank an Daniel Mross für die gemeldeten Fehler!
 
 v0.1.1 (8.8.2007)
-- Max Anzahl Zeichen für Pfadangaben der Templates hochgesetzt
-- NPE im Teamview bei fehlendem Spieler entfernt (alternativ wird neuer Language-Marker angezeigt)
-- Im View der Liga-Tabelle kann jetzt auch ein Template angegeben werden
-
-- Umstellung der Profil-Anzeige
--- Templates für Profile sind jetzt einheitlich im Teamview, ProfileList und ProfileView
--- Marker für FIRST_PICTURE geändert in PROFILE_FIRST_PICTURE
--- TS für Bilder der Personen geändert (sind jetzt "profile" zugeordnet)
-
+* Max Anzahl Zeichen für Pfadangaben der Templates hochgesetzt
+* NPE im Teamview bei fehlendem Spieler entfernt (alternativ wird neuer Language-Marker angezeigt)
+* Im View der Liga-Tabelle kann jetzt auch ein Template angegeben werden
+* Umstellung der Profil-Anzeige
+** Templates für Profile sind jetzt einheitlich im Teamview, ProfileList und ProfileView
+** Marker für FIRST_PICTURE geändert in PROFILE_FIRST_PICTURE
+** TS für Bilder der Personen geändert (sind jetzt "profile" zugeordnet)
+[[code]]
 plugin.tx_cfcleaguefe_report {
   profilelist {
     profile < temp.profile
@@ -245,8 +218,8 @@ plugin.tx_cfcleaguefe_report {
     }
   }
 }
-
-- Umstellungen im Matchview
--- Es lassen sich mehr Werte per Typoscript formatieren
--- TS für Spieldatum und Spielbericht wurde matchreport.match zugeordnet
--- Neue Methoden für die formatierte Ausgabe im Template vorhanden
+[[code]]
+* Umstellungen im Matchview
+** Es lassen sich mehr Werte per Typoscript formatieren
+** TS für Spieldatum und Spielbericht wurde matchreport.match zugeordnet
+** Neue Methoden für die formatierte Ausgabe im Template vorhanden
