--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,26 @@
 
 Änderungen
 ----------
+v0.3.0 (??.01.2008)
+Änderungen bei der Verlinkung von Informationen
+* Neue TS-Config für Links in Anlehnung an die typolink-Konfigration
+Unterhalb einer Datensatz-Konfiguration gibt es den neuen reservierten Typ links. Diesem folgt der Name des Links und das Ziel. Beispiel:
+[[code]]
+lib.t3sports.team {
+  links {
+    team.target = 123
+    player.target = 123
+    supporter.target = 123
+  }
+}
+[[code]]
+Aus dieser Konfiguration ergeben sich für ein Team drei Link-Marker:
+###TEAM_TEAMLINK###, ###TEAM_PLAYERLINK### und ###TEAM_SUPPORTERLINK###
+Dieses Schema ist (noch) nicht voll dynamisch. Es können also noch keine eigenen Links erstellt werden.
+* View Teamlist: Neuer Subpartmarker ###TEAMS###
+* View Matchtable: der Subpart ###MATCH_FREE### steht jetzt innerhalb des Subparts ###MATCH###
+* Statistiken werden im Flexform dynamisch ermittelt. Es stehen alle Services mit dem Key cfcleague_statistics zur Auswahl.
+
 v0.2.3 (29.01.2008)
 * Neuer View: Kreuztabelle
 * Bug 1864071 - Gelbe Karten nur zählen, wenn nicht Gelbrot erhalten
