Show birthday list

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,9 @@
 
 Änderungen
 ----------
+v0.3.5 (??.05.2008) (not released)
+* Profilelist with new option to show a list of profiles with birthday in current day or month
+
 v0.3.4 (17.05.2008) (not released)
 * Some internal changes for better integration of other extensions
 
