--- a/ChangeLog
+++ b/ChangeLog
@@ -2,10 +2,13 @@
 
 Änderungen
 ----------
-v0.3.6 (25.05.2008) (not released)
-- Configuration of charts was changed. You have to set colors in flexform again. TS key changed from plugin.tx_cfcleaguefe_competition.chartColors to plugin.tx_cfcleaguefe_competition.chart.defaults.colors
-- Chart in matchreport is now really configureable. See plugin.tx_cfcleaguefe_report.matchreport.svChartMatch
-- Some constants for chart size and colors
+v0.3.6 (31.05.2008) (not released)
+* Redesign of match ticker. Better support of TS-References.
+* New TS-Register register:T3SPORTS_NOTE_FAVCLUB for match notes. It can be used to make special outputs for favorite team. Example for goals is included.
+* New link option removeIfDisabled for match and ticker link
+* Configuration of charts was changed. You have to set colors in flexform again. TS key changed from plugin.tx_cfcleaguefe_competition.chartColors to plugin.tx_cfcleaguefe_competition.chart.defaults.colors
+* Chart in matchreport is now really configureable. See plugin.tx_cfcleaguefe_report.matchreport.svChartMatch
+* Some constants for chart size and colors
 
 v0.3.5 (25.05.2008) (not released)
 * A complete refactoring of util_LeagueTable that makes it much more flexible.
