--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,9 @@
 
 Änderungen
 ----------
+v0.4.0 (08.06.2008)
+* Logo size for teamSmall fixed
+
 v0.3.8 (07.06.2008) (not released)
 * Some small fixed for new release
 * Documentation updated
