--- a/ChangeLog
+++ b/ChangeLog
@@ -2,7 +2,12 @@
 
 Änderungen
 ----------
-v0.5.1 (25.11.2008)
+v0.5.2 (28.11.2008)
+* Modulmarker ###MARKERMODULE__MATCHHISTORY### changed to use subparts. HTML template changed.
+* Matchtable-View can be used to search for matches of a referee
+* In MatchReport there is a new register T3SPORTS_PARAMS_REFEREE_MATCHES. It contains necessary url params to link to a matchtable view with all matches of the referee.
+
+v0.5.1 (25.11.2008) (not released)
 * Bugfix for t3sportsbet: Methods getGoalsHome() and getGoalsGuest() fixed for extratime and penalty
 * Wizard for html template in flexforms
 * Bug 2220269: Avoid warnings in player statistics
